@startuml shortener_erd

hide circle
skinparam Linetype ortho
skinparam Ranksep 60
skinparam Nodesep 100

entity "User" as user {
  *id : <<uuid>>
  --
  * username : text
  * email : text
  * passwordHash : text
  * role : ENUM(ADMIN, ADVERTISER, USER)
  * createdAt: timestamp
  * updatedAt: timestamp
  deletedAt: timestamp
}

entity "Link" as link {
  *id : <<uuid>>
  --
  * createdById: <<FK>>
  * url: text
  * shortId: text
  * isAdvertisementEnabled: bool
  * createdAt: timestamp
  * updatedAt: timestamp
  deletedAt: timestamp
}

entity "LinkStatistics" as linkStats {
  *id : <<uuid>>
  --
  * linkId: <<FK>>
  * region: text
  * language: text
  * createdAt: timestamp
  * updatedAt: timestamp
  deletedAt: timestamp
}

entity "Advertisement" as ad {
  *id : <<uuid>>
  --
  * createdById: <<FK>>
  * title: text
  * adUrl: text
  * region: text
  * language: text
  * forwardUrl: text
  * type: ENUM(VIDEO, PHOTO)
  * createdAt: timestamp
  * updatedAt: timestamp
  deletedAt: timestamp
}

entity "AdvertisementStatistics" as adStats {
  *id : <<uuid>>
  --
  * advertisementId: <<FK>>
  * linkId: <<FK>>
  * createdAt: timestamp
  * updatedAt: timestamp
  skippedAt: timestamp
  clickedAt: timestamp
  deletedAt: timestamp
}

user ||..o{ link
user ||..o{ ad

ad ||..o{ adStats
link ||..o{ linkStats
link ||..o{ adStats
@enduml